--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 .footer{
-  position: absolute;
+  position: fixed;
   height: 15px;
   bottom: 0;
   width: 100%;
